--- a/index.html
+++ b/index.html
@@ -39,47 +39,37 @@
 <body class="text-gray-800 font-sans">
 
 <!------------------------------------------------->
-  <!-- Hero -->
- <section class="px-4 pt-20 pb-28 max-w-6xl mx-auto">
+<!-- Hero -->
+<section class="px-4 py-20 md:py-28 max-w-6xl mx-auto">
   <div class="flex flex-col md:flex-row items-center gap-12">
-    
-    <div class="flex justify-center md:justify-start fade-in">
-      <div class="relative">
-        <img 
-          src="foto/gambar2.jpeg" 
-          alt="Muhammad Ahsan"
-          class="w-48 h-48 md:w-60 md:h-60 rounded-2xl object-cover border-4 border-white shadow-2xl"
-        />
-        <div class="absolute -bottom-2 -right-2 bg-primary text-white text-xs font-bold px-3 py-1 rounded-full">
-          Dev • Builder
-        </div>
+    <!-- Foto Profil -->
+    <div class="relative">
+      <img 
+        src="foto/gambar2.jpeg" 
+        alt="Muhammad Ahsan"
+        class="w-56 h-56 md:w-64 md:h-64 rounded-xl object-cover border-4 border-white shadow-lg"
+      />
+      <div class="absolute -bottom-2 -right-2 bg-indigo-600 text-white text-xs font-bold px-3 py-1 rounded-full">
+        Full-stack Developer
       </div>
     </div>
 
-    <div class="text-center md:text-left max-w-3xl fade-in">
-      <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold leading-tight">
-        Hi, I’m <span class="text-primary whitespace-nowrap">Muhammad Ahsan</span>
-      </h1>
-
-      <p class="text-xl text-gray-600 mt-4 font-medium">
-        Web Developer & Creative Problem Solver
-      </p>
-
-      <p class="mt-6 text-gray-700 leading-relaxed text-lg">
-         i craft<span class="font-semibold"> high-performance, scalable, and user-centered web applications </span> using modern and flexible technologies to solve real-world problems.
-      </p>
-
+    <!-- Teks Hero -->
+    <div class="text-center md:text-left max-w-2xl">
+  <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold leading-tight">
+    Hi, I’m <span class="text-indigo-600 whitespace-nowrap">Muhammad Ahsan</span>
+  </h1>
+  <p class="text-xl text-gray-600 mt-4 font-medium">Web Developer & Creative Problem Solver</p>
+  <p class="mt-6 text-gray-700 leading-relaxed">
+    I craft high-performance, scalable, and user-centered web applications using modern and flexible technologies to solve real-world problems.
+  </p>
+  <!-- tombol tetap di sini -->
       <div class="flex flex-wrap justify-center md:justify-start gap-4 mt-10">
-        <a href="project.html" class="px-7 py-3.5 bg-primary text-white font-semibold rounded-xl hover:bg-indigo-800 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-0.5">
-          View Projects
-        </a>
-        <a href="mailto:siahsantv@gmail.com" class="px-7 py-3.5 bg-white border border-gray-300 text-gray-800 font-semibold rounded-xl hover:bg-gray-50 transition-all">
-          Let’s Work Together
-        </a>
+        <a href="about.html" class="px-6 py-3 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition">About Me</a>
+        <a href="#projects" class="px-6 py-3 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition">View Projects</a>
+        <a href="#contact" class="px-6 py-3 border border-gray-300 text-gray-800 font-semibold rounded-lg hover:bg-gray-50 transition">Let’s Work Together</a>
       </div>
-
     </div>
-  </div>
 </section>
 
 <!------------------------------------------------->
@@ -121,131 +111,80 @@
   </div>
 </section>
 
- <section id="projects" class="px-4 py-20 max-w-6xl mx-auto">
+
+  <!------------------------------------------------>
+ <!-- Projects Section -->
+<section id="projects" class="px-4 py-20 max-w-6xl mx-auto">
   <div class="text-center mb-16">
-    <h2 class="text-3xl md:text-4xl font-bold">Featured Projects</h2>
+    <h2 class="text-3xl font-bold">Featured Projects</h2>
     <p class="text-gray-600 mt-4 max-w-2xl mx-auto">
-      Real-world applications I’ve built with passion and precision.
+      Real-world applications built with purpose and precision.
     </p>
   </div>
 
-  <!------------------------------------------------>
-  <div class="space-y-12">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+    <!-- Project 1 -->
+    <a href="project.html#one-school" class="block bg-white rounded-xl p-6 shadow-sm hover:shadow-md transition">
+      <h3 class="font-bold text-lg text-indigo-700">One School E-Report</h3>
+      <p class="text-gray-600 mt-2">Real-time school reporting with status tracking.</p>
+    </a>
 
-   <!-- Project 1: E-Report -->
-<div class="flex flex-col md:flex-row gap-6 items-center mb-12">
-<div class="md:w-1/2">
-<img src="foto/ERepor.png" alt="One School E-Report" class="w-full rounded-xl shadow-md border border-gray-100">
-</div>
-<div class="md:w-1/2">
-<h3 class="text-2xl font-bold">One ​​School E-Report</h3>
-<p class="text-gray-600 mt-3 leading-relaxed">
-The official digital reporting platform for reporting student issues directly to teachers and guardians. Displays real-time status: Incoming → Actioned → Completed.
-</p>
+    <!-- Project 2 -->
+    <a href="project.html#psychology" class="block bg-white rounded-xl p-6 shadow-sm hover:shadow-md transition">
+      <h3 class="font-bold text-lg text-indigo-700">M-Ahsan Psychology</h3>
+      <p class="text-gray-600 mt-2">HIPAA-compliant teletherapy for U.S. clients.</p>
+    </a>
 
-<!-- Technical Details -->
-<div class="mt-6 pt-4 border-t border-gray-200">
-<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
-<p class="text-sm text-gray-600 mb-3">
-<strong>Role:</strong> Full-stack developer & UI/UX designer<br>
-<strong>Challenge:</strong> Maintaining the confidentiality of sensitive reports while ensuring status transparency.<br>
-<strong>Solution:</strong> Design a closed communication flow with two-way validation (teacher + system).
-</p> 
-<div class="flex flex-wrap gap-2"> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-html5 text-orange-500"></i> HTML 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-css3-alt text-blue-600"></i> CSS 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-js text-yellow-500"></i> JavaScript 
-</span> 
-</div> 
-</div> 
+    <!-- Project 3 -->
+    <a href="project.html#prime-edge" class="block bg-white rounded-xl p-6 shadow-sm hover:shadow-md transition">
+      <h3 class="font-bold text-lg text-indigo-700">Prime Edge Digital</h3>
+      <p class="text-gray-600 mt-2">Corporate site that boosted client leads by 40%.</p>
+    </a>
+  </div>
 
-<a href="https://one-school-e-report.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a>
-<a href="https://github.com/MuhammadAhsan-RPL/One-School-E-Report" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
-</div>
-</div>
-<!------------------------------------------------>
-<!-- Project 2: Psychology -->
-<div class="flex flex-col md:flex-row-reverse gap-6 items-center mb-12"> 
-<div class="md:w-1/2"> 
-<img src="foto/Psikolog.png" alt="M-Ahsan Psychology" class="w-full rounded-xl shadow-md border border-gray-100"> 
-</div> 
-<div class="md:w-1/2"> 
-<h3 class="text-2xl font-bold">M-Ahsan Psychology</h3> 
-<p class="text-gray-600 mt-3 leading-relaxed"> 
-Bilingual (EN/ID) online therapy platform for clients in the US, featuring CA & NY licensing, as well as secure, encrypted Zoom sessions. 
-</p>
+  <div class="text-center mt-10">
+    <a href="project.html" class="text-indigo-600 font-medium hover:underline">View all projects →</a>
+  </div>
+</section>
 
-<!-- Technical Details -->
-<div class="mt-6 pt-4 border-t border-gray-200">
-<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
-<p class="text-sm text-gray-600 mb-3">
-<strong>Role:</strong> Frontend developer & content strategist<br>
-<strong>Challenge:</strong> Conveying professional credentials while building emotional trust.<br>
-<strong>Solution:</strong> Human-touch visuals (photos of consultation rooms), clear text, and an emphasis on compliance (HIPAA).
-</p> 
-<div class="flex flex-wrap gap-2"> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-html5 text-orange-500"></i> HTML 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-css3-alt text-blue-600"></i> CSS 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-js text-yellow-500"></i> JavaScript 
-</span> 
-</span> 
-</div> 
-</div> 
+<!-- What Clients Say -->
+<section class="px-4 py-20 bg">
+  <div class="max-w-6xl mx-auto text-center">
+    <h2 class="text-3xl font-bold">What Clients Say</h2>
+    <p class="text-gray-600 mt-4 max-w-xl mx-auto">
+      Don’t just take my word for it — here’s what partners say about working with me.
+    </p>
+  </div>
 
-<a href="https://m-ahsan-psychology.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a>
-<a href="https://github.com/MuhammadAhsan-RPL/M-Ahsan-Psychology" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
-</div>
-</div>
-<!------------------------------------------------>
-<!-- Project 3: Prime Edge -->
-<div class="flex flex-col md:flex-row gap-6 items-center mb-12"> 
-<div class="md:w-1/2"> 
-<img src="foto/primeEdge .png" alt="Prime Edge Digital" class="w-full rounded-xl shadow-md border border-gray-100"> 
-</div> 
-<div class="md:w-1/2"> 
-<h3 class="text-2xl font-bold">Prime Edge Digital</h3> 
-<p class="text-gray-600 mt-3 leading-relaxed"> 
-Corporate website for a digital agency featuring services, case studies and global client testimonials. 
-</p>
+  <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 mt-12">
+    <!-- Testimonial 1 -->
+    <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition">
+      <p class="text-gray-700 italic mb-4">
+        “The E-Report system transformed how we handle student issues — fast, secure, and transparent.”
+      </p>
+      <div class="font-bold">Ustadz Yusuf</div>
+      <div class="text-gray-500 text-sm">One School, Jakarta</div>
+    </div>
 
-<!-- Technical Details -->
-<div class="mt-6 pt-4 border-t border-gray-200">
-<p class="text-sm font-medium text-gray-800 mb-2">Role & Technology</p>
-<p class="text-sm text-gray-600 mb-3">
-<strong>Role:</strong> Lead frontend developer<br>
-<strong>Challenge:</strong> Balancing premium aesthetics with loading speed & SEO.<br>
-<strong>Solution:</strong> Modular components, lazy image loading, and a scalable CSS architecture.
-</p> 
-<div class="flex flex-wrap gap-2"> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-html5 text-orange-500"></i> HTML 
-</span> 
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fas fa-paint-brush text-indigo-600"></i> Tailwind CSS 
-</span> 
-<span class="badge bg-light text-dark d-flex align-items-center gap-1 px-2 py-1 rounded">
-  <i class="fab fa-bootstrap"></i> Bootstrap
-</span>
-<span class="flex items-center gap-1 bg-gray-100 px-2 py-1 rounded text-xs"> 
-<i class="fab fa-js text-yellow-500"></i> JavaScript 
-</span> 
-</div> 
-</div> 
+    <!-- Testimonial 2 -->
+    <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition">
+      <p class="text-gray-700 italic mb-4">
+        “Ahsan delivered a HIPAA-compliant platform on time with zero security flaws. Highly professional.”
+      </p>
+      <div class="font-bold">Dr. Ahsan</div>
+      <div class="text-gray-500 text-sm">Owner, MAhsan Psychology</div>
+    </div>
 
-<a href="https://prime-edge-digital.vercel.app/" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Demo →</a> 
-<a href="https://github.com/MuhammadAhsan-RPL/Company-Website" target="_blank" class="mt-4 inline-block text-blue-600 font-medium hover:underline">Live Code →</a>  
-</div>
-</div>
+    <!-- Testimonial 3 -->
+    <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition">
+      <p class="text-gray-700 italic mb-4">
+        “Our agency’s new website increased leads by 40% in 3 months. Worth every penny.”
+      </p>
+      <div class="font-bold">Sarah Kim</div>
+      <div class="text-gray-500 text-sm">CTO, Prime Edge Digital</div>
+    </div>
+  </div>
+</section>
 
 
 
@@ -316,6 +255,8 @@ Corporate website for a digital agency featuring services, case studies and glob
 
   </div>
 </section>
+
+
 
   <!-- Footer -->
   <footer class="px-4 py-10 text-center text-gray-500 text-sm">
